syntax = "proto3";

option csharp_namespace = "TetsukiZone.Protos";

package game;

service Game {
  rpc Register (RegisterData) returns (RegisterReply);
  rpc Login (LoginData) returns (LoginReply);
  rpc PostDialog(DialogRequest) returns (stream DialogReply);
}

message RegisterData {
  string user_name = 1;
  string nickname = 2;
  string email = 3;
  string password = 4;
}

message RegisterReply {
  bool status = 1;
  string message = 2;
}

message LoginData {
  string account = 1;
  string password = 2;
}

message LoginReply {
  bool status = 1;
  string message = 2;
}

message DialogRequest {
  string background = 1;
  string character = 2;
  string text = 3;
}

message DialogReply {
  bool status = 1;
  bytes image = 2;
}